# zephir-nrf52-demo

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf  sample.yaml  sysbuild.conf
boards/: nrf52832.overlay
mcuboot-keys/: mcuboot_nrf52.pem
src/: ble_task.c  ble_task.h  board_def.h  demo_task1.c  demo_task1.h  demo_task2.c  demo_task2.h  main.c  sensor_task.c  sensor_task.h  serialization.c  serialization.h  simple.proto  uart_task.c  uart_task.h  util.h
src/app/: app.c
src/ble/: ble.c  ble.h  stream_lc3.c  stream_lc3.h  stream_tx.c  stream_tx.h
src/mpu_driver/: mpu6050.c  mpu6050.h
sysbuild/: mcuboot.conf
tests/unit_tests/: CMakeLists.txt  testcase.yaml
tests/unit_tests/src/: main.c
